Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-110632

Assertion failure in qqmltreemodeltotablemodel.cpp when adding/removing files from directory watched by QFileSystemModel used by TreeView

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P1: Critical
    • 6.5.1, 6.6.0
    • 6.6
    • Quick: Controls 2
    • None
    • f04974751 (dev), 41a349f00 (dev), 98ce32043 (6.5), b0d3bec00 (6.5), 6e0d4f155 (tqtc/lts-6.2)

    Description

      Steps to reproduce:

      1. Cherry-pick https://codereview.qt-project.org/c/qt/qtdeclarative/+/446377
      2. Run it
      3. Go to a folder that contains some files
      4. Add or remove files from that folder; it will crash
                                                                                              
      1   __pthread_kill_implementation                 pthread_kill.c                        44   0x7fffef7a5a7c 
      2   __pthread_kill_internal                       pthread_kill.c                        78   0x7fffef7a5a7c 
      3   __GI___pthread_kill                           pthread_kill.c                        89   0x7fffef7a5a7c 
      4   __GI_raise                                    raise.c                               26   0x7fffef751476 
      5   __GI_abort                                    abort.c                               79   0x7fffef7377f3 
      6   qAbort                                        qglobal.cpp                           161  0x7fffefe32c29 
      7   qt_message_fatal                              qlogging.cpp                          2041 0x7fffefe586d2 
      8   QMessageLogger::fatal                         qlogging.cpp                          930  0x7fffefe4f1de 
      9   qt_assert                                     qassert.cpp                           68   0x7fffefe2d7b0 
      10  QQmlTreeModelToTableModel::modelDataChanged   qqmltreemodeltotablemodel.cpp         642  0x7ffff563bc38 
      11  QQmlTreeModelToTableModel::qt_static_metacall moc_qqmltreemodeltotablemodel_p_p.cpp 519  0x7ffff5646f85 
      12  doActivate<false>                             qobject.cpp                           3991 0x7ffff0150584 
      13  QMetaObject::activate                         qobject.cpp                           4039 0x7ffff013ab97 
      14  QAbstractItemModel::dataChanged               moc_qabstractitemmodel.cpp            1318 0x7ffff086d19d 
      15  QFileSystemModelPrivate::_q_fileSystemChanged qfilesystemmodel.cpp                  1970 0x7ffff2535641 
      16  QFileSystemModel::qt_static_metacall          moc_qfilesystemmodel.cpp              275  0x7ffff2537bfc 
      17  QMetaCallEvent::placeMetaCall                 qobject.cpp                           610  0x7ffff01258a8 
      18  QObject::event                                qobject.cpp                           1378 0x7ffff0127a96 
      19  QFileSystemModel::event                       qfilesystemmodel.cpp                  1720 0x7ffff2532dfa 
      20  QCoreApplicationPrivate::notify_helper        qcoreapplication.cpp                  1232 0x7fffefff133a 
      ... <More>                                                                                                  
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            vhilshei Volker Hilsheimer
            mitch_curtis Mitch Curtis
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes