Refactor QFileSystemModel: use named values for columns

Hardcoded 0, 1, 2, 3 make it hard to follow the logic of this code.
Replace those values with values in the already existing unnamed enum,
and use everywhere.

Task-number: QTBUG-110632
Change-Id: I325ab9edb5f3f996e87c83be1ec7226d5453f2cc
Reviewed-by: Mitch Curtis <mitch.curtis@qt.io>
(cherry picked from commit 41a349f004fd6afc450b775909d1a96a92df61d8)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>